Bug 62614 - [SNB] black screen when running 3D apps with vblank turned off
Summary: [SNB] black screen when running 3D apps with vblank turned off
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-21 21:26 UTC by Ivan Bulatovic
Modified: 2017-07-24 22:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg log (36.42 KB, text/plain)
2013-03-21 21:37 UTC, Ivan Bulatovic
no flags Details

Description Ivan Bulatovic 2013-03-21 21:26:10 UTC
After xf86-video-intel 2.21.5 upgrade, when I try to run any 3D apps (windowed or fullscreen) with wait for vblank turned of I get only blank content of the window/app. Testcase:

vblank_mode=0 glxgears

window content is black

without vblank_mode=0, glxgears run just fine

After downgrading to 2.21.4 I can't reproduce the bug anymore.

Tried several times upgrading/downgrading and testcase was 100% reliable.

Intel HD2000 (i5-2400)
xf86-video-intel 2.21.5
mesa 9.1.1
xorg-server 1.14.0

There are no error messages in Xorg.0.log, dmesg, no errors in i915_error_state

Thanks !
Comment 1 Ivan Bulatovic 2013-03-21 21:31:17 UTC
Forgot to mention that SNA is enabled !
Comment 2 Ivan Bulatovic 2013-03-21 21:37:04 UTC
Created attachment 76879 [details]
xorg log
Comment 3 Chris Wilson 2013-03-21 22:55:23 UTC
This is the root cause: http://lists.x.org/archives/xorg-devel/2012-September/033793.html

However, I can't fix up that breakage in the driver so I just have to go back to ignoring the issue:

commit 9f8e86800345d19785eae2dd2099dd7d61a7a3b3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Mar 21 22:48:06 2013 +0000

    sna/dri: Disable assertion and associated bookkeeping
    
    Due to long standing ignored bugs in DRI2, we have to accept breakage
    in the driver.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=62614
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.