sna/dri: Disable assertion and associated bookkeeping

Due to long standing ignored bugs in DRI2, we have to accept breakage
in the driver.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=62614
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>