src/sna/sna_dri.c
@@ -872,10 +872,10 @@ sna_dri_copy(struct sna *sna, DrawablePtr draw, RegionPtr region,
 }
 
 static bool
-can_blit(struct sna * sna,
+can_blit(struct sna *sna,
 	 DrawablePtr draw,
-	 DRI2BufferPtr front,
-	 DRI2BufferPtr back)
+	 DRI2BufferPtr dst,
+	 DRI2BufferPtr src)
 {
 	RegionPtr clip;
 	int w, h;
@@ -884,13 +884,19 @@ can_blit(struct sna * sna,
 	if (draw->type == DRAWABLE_PIXMAP)
 		return true;
 
-	if (get_private(front)->pixmap != get_drawable_pixmap(draw)) {
-		DBG(("%s: reject as front pixmap=%ld, but expecting pixmap=%ld\n",
+#if 0
+	if (get_private(dst)->pixmap != get_drawable_pixmap(draw)) {
+		DBG(("%s: reject as dst pixmap=%ld, but expecting pixmap=%ld\n",
 		     __FUNCTION__,
-		     get_private(front)->pixmap ? get_private(front)->pixmap->drawable.serialNumber : 0,
+		     get_private(dst)->pixmap ? get_private(dst)->pixmap->drawable.serialNumber : 0,
 		     get_drawable_pixmap(draw)->drawable.serialNumber));
 		return false;
 	}
+
+	assert(sna_pixmap(get_private(dst)->pixmap)->flush);
+#endif
+	assert(get_private(dst)->bo->flush);
+	assert(get_private(src)->bo->flush);
 
 	clip = &((WindowPtr)draw)->clipList;
 	w = clip->extents.x2 - draw->x;
@@ -898,14 +904,14 @@ can_blit(struct sna * sna,
 	if ((w|h) < 0)
 		return false;
 
-	s = get_private(front)->size;
+	s = get_private(dst)->size;
 	if ((s>>16) < h || (s&0xffff) < w) {
 		DBG(("%s: reject front size (%dx%d) < (%dx%d)\n", __func__,
 		       s&0xffff, s>>16, w, h));
 		return false;
 	}
 
-	s = get_private(back)->size;
+	s = get_private(src)->size;
 	if ((s>>16) < h || (s&0xffff) < w) {
 		DBG(("%s:reject back size (%dx%d) < (%dx%d)\n", __func__,
 		     s&0xffff, s>>16, w, h));
@@ -944,8 +950,6 @@ sna_dri_copy_region(DrawablePtr draw,
 
 	if (!can_blit(sna, draw, dst_buffer, src_buffer))
 		return;
-
-	assert(sna_pixmap(pixmap)->flush);
 
 	if (dst_buffer->attachment == DRI2BufferFrontLeft) {
 		dst = sna_pixmap_get_bo(pixmap);
